--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#0b2970</color>
     <color name="colorAccent">#0b2970</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#424242</color>
+    <color name="grayBackground">#212121</color>
 </resources>
