--- a/app/src/main/res/layout/recyclerview_row.xml
+++ b/app/src/main/res/layout/recyclerview_row.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="6dp"
         android:padding="10dp"
-        card_view:cardBackgroundColor="@color/gray">
+        card_view:cardBackgroundColor="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
