--- a/app/src/main/res/layout/activity_sensor_data_detailed_view.xml
+++ b/app/src/main/res/layout/activity_sensor_data_detailed_view.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:label="@string/app_name"
     android:orientation="vertical"
     tools:context=".UserLogin"
     android:paddingTop="24dp"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:paddingBottom="24dp"
-    android:background="@color/colorPrimary">
+    android:background="@color/grayBackground">
 
   <TextView
       android:id="@+id/detailTitle"
@@ -22,12 +23,19 @@
       android:textColor="@color/white"
       />
 
-    <ScrollView
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        card_view:cardBackgroundColor="@color/colorPrimary"
+        card_view:cardCornerRadius="6dp">
 
-        <LinearLayout
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -40,11 +48,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="Device ID:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/deviceId"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -54,11 +64,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="PM25:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/pm25"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -68,11 +80,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="PM10:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/pm10"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -82,11 +96,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="CO2:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/co2"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -96,11 +112,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="O3:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/o3"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -110,11 +128,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="Pressure:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/pressure"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -124,11 +144,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="Temperature:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/temperature"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -138,11 +160,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="Humidity:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/humidity"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -152,11 +176,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="UTC:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/utc"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -166,11 +192,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="Latitude:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/latitude"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -180,11 +208,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="Longitude:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/longitude"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -194,11 +224,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="Noise:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/noise"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
@@ -208,16 +240,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="User ID:"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
                 android:id="@+id/userId"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"/>
 
 
-        </LinearLayout>
-    </ScrollView>
+        </android.support.constraint.ConstraintLayout>
+
+        </ScrollView>
+    </android.support.v7.widget.CardView>
+
+
+
+
+
 </LinearLayout>
