--- a/app/src/main/res/layout-land/activity_sensor_data_detailed_view.xml
+++ b/app/src/main/res/layout-land/activity_sensor_data_detailed_view.xml
@@ -4,227 +4,261 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:label="@string/app_name"
     android:orientation="vertical"
     tools:context=".UserLogin"
     android:paddingTop="24dp"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:paddingBottom="24dp"
-    android:background="@color/colorPrimary">
+    android:background="@color/grayBackground">
 
-  <TextView
-      android:id="@+id/detailTitle"
-      android:textSize="24sp"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="20dp"
-      android:textColor="@color/white"
-      app:autoSizeTextType="uniform"
-      />
+    <TextView
+        android:id="@+id/detailTitle"
+        android:textSize="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/white"
+        />
 
-    <ScrollView
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        card_view:cardBackgroundColor="@color/colorPrimary"
+        card_view:cardCornerRadius="6dp">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
 
 
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Device ID:"
-                app:autoSizeTextType="uniform"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="Device ID:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/deviceId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:autoSizeTextType="uniform"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/deviceId"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:text="PM25:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="PM25:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/pm25"
-                android:layout_width="wrap_content"
-                android:textSize="14sp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/pm25"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="PM10:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="PM10:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/pm10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/pm10"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="CO2:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="CO2:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/co2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/co2"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="O3:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="O3:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/o3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/o3"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Pressure:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="Pressure:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/pressure"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/pressure"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Temperature:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="Temperature:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/temperature"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/temperature"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Humidity:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="Humidity:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/humidity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/humidity"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="UTC:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="UTC:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/utc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/utc"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Latitude:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="Latitude:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/latitude"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/latitude"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Longitude:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="Longitude:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/longitude"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/longitude"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Noise:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="Noise:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/noise"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/noise"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
-            // New detail
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="User ID:"
-                android:layout_marginBottom="15dp"/>
+                // New detail
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="User ID:"
+                    android:layout_marginBottom="15dp"/>
 
-            <TextView
-                android:id="@+id/userId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/userId"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"/>
 
 
-        </LinearLayout>
-    </ScrollView>
+            </LinearLayout>
+
+        </ScrollView>
+    </android.support.v7.widget.CardView>
+
+
+
+
+
 </LinearLayout>
