--- a/app/src/main/res/layout/activity_sensor_data_detailed_view.xml
+++ b/app/src/main/res/layout/activity_sensor_data_detailed_view.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -252,7 +252,7 @@
                 android:layout_marginBottom="15dp"/>
 
 
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
 
         </ScrollView>
     </android.support.v7.widget.CardView>
